--- a/contacto.html
+++ b/contacto.html
@@ -127,7 +127,7 @@
             <article class="col-lg-5 col-md-8 col-sm-8 my-2">
                 <div class="form-container">
                     <p class="form-tit">Contactate con nosotras</p>
-                    <form action="/php/form.php" method="POST" class="contacto-form">
+                    <form action="php/form.php" method="POST" class="contacto-form">
                         <div class="form-row">
                             <label for="full-name">Nombre</label>
                             <input type="text" id="full-name" name="nombre">
@@ -150,7 +150,6 @@
                         <div class="form-row">
                             <button type="submit">Enviar</button>
                         </div>
-
                     </form>
                 </div>
             </article>
