--- a/exito.html
+++ b/exito.html
@@ -44,10 +44,11 @@
         <p>Nos contactaremos en la brevedad.</p>
     </section>
 
+    <script src="js/script.js"></script>
     <script>
         setTimeout(function() {
-            window.location.replace("index.html" )
-        }, 3000);
+            window.location.replace("index.html")
+        }, 4000);
     </script>
 </body>
 
