limpieza de clases

--- a/contacto.html
+++ b/contacto.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sigamos conectados, visitanos en nuestras redes sociales, ruh.esencia, instagram y facebook, o comunicate por whatsapp, correo o dejanos tu consulta en la web.">
+    <meta name="description"
+        content="Sigamos conectados, visitanos en nuestras redes sociales, ruh.esencia, instagram y facebook, o comunicate por whatsapp, correo o dejanos tu consulta en la web.">
     <meta name="keywords"
         content="dejanos tu consulta, contactanos, redes sociales, ruh.esencia, instagram, facebook, Productos naturales, velas de sojas, 100% cera vegetal,  venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Contactate con ruh esencia">
-    <meta property="og:description"
-        content="Dejanos tu consulta y sigamos conectados en nuestras redes Sociales">
+    <meta property="og:description" content="Dejanos tu consulta y sigamos conectados en nuestras redes Sociales">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
     <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/logos/logo-ovalado.png">
 
@@ -93,7 +93,7 @@
                             <p class="wp-n">+54 9 3512297942</p>
                         </div>
                         <div class="item_contacto">
-                            <img src="logos/mail-icono.svg" alt="Gmail" widht=30 height=30 >
+                            <img src="logos/mail-icono.svg" alt="Gmail" widht=30 height=30>
                             <p>ruh.esencia@gmail.com</p>
                         </div>
                     </div>
@@ -130,11 +130,11 @@
                     <form action="php/form.php" method="POST" class="contacto-form">
                         <div class="form-row">
                             <label for="full-name">Nombre</label>
-                            <input type="text" id="full-name" name="nombre">
+                            <input type="text" id="full-name" name="nombre" placeholder="Nombre Completo">
                         </div>
                         <div class="form-row">
                             <label for="email">Email</label>
-                            <input type="email" id="email" placeholder="Ej maria@gmail.com" name="email">
+                            <input type="email" id="email" placeholder="Ej: maria@gmail.com" name="email">
                         </div>
                         <div class="form-row">
                             <label for="telefono">Telefono</label>
@@ -144,7 +144,7 @@
                         <div class="form-row">
                             <label for="abstract">Mensaje</label>
                             <textarea name="textarea" id="abstract"></textarea>
-                            <p class="instructions">Describe tu consulta en 500 palabras o menos</p>
+                            <p class="instructions">Escribe tu consulta en 300 palabras o menos</p>
                         </div>
 
                         <div class="form-row">
@@ -154,12 +154,12 @@
                 </div>
             </article>
         </section>
-    </main>     
+    </main>
 
     <!-- footer  -->
 
     <footer>
-        <div class="foot">
+        <section class="foot">
             <nav class="botonera_f">
                 <div class="botonera_f_tit">Categoria</div>
                 <ul>
@@ -172,19 +172,19 @@
                 </ul>
             </nav>
 
-            <div class="redes">
+            <section class="redes">
                 <div class="redes_tit">Sigamos conectados</div>
                 <div class="redes_iconos">
                     <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="redes_link1">
                         <img src="logos/Insta-logo.png" alt="Instagram" class="redes-img"> </a>
-                    <a href="https://www.facebook.com" target="_blank" class="redes_link2">
+                    <a href="https://www.facebook.com" target="_blank" class="redes_link1">
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
                     <img src="logos/logo-footer.png" alt="logo">
                     <p class="logo-tit-f">Ruh - Esencia</p>
                 </div>
-            </div>
+            </section>
 
             <section class="foot_contacto">
                 <div class="foot_contacto_tit">Contactanos</div>
@@ -203,7 +203,7 @@
                     </article>
                 </div>
             </section>
-        </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
