--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="barra">
             <div class="logo">
                 <a href="index.html"> <img src="logos/logo-ovalado.png" alt="Logo" class="logo-img">
-                    <img src="logos/logo-index.png" alt="" class="logo-s-fondo"></a>
+                    <img src="logos/logo-index.png" alt="Logo" class="logo-portada"></a>
                 <h1>Ruh - Esencia</h1>
             </div>
         </div>
@@ -89,7 +89,7 @@
 
     <!-- main  -->
 
-    <!--   section 1 -->
+    <!--  Portada - carousel -->
 
     <section id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -104,7 +104,7 @@
             <div class="carousel-item active">
                 <img src="img/carousel-1.png" class="d-block w-100 " alt="Portada Velas">
                 <div class="carousel-caption d-none d-md-block">
-                    <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos. </p>
+                    <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -134,16 +134,14 @@
 
     <main class="body-home">
 
+        <!-- seccion 1 -->
 
-
-
-        <!-- seccion 2 -->
-
-        <div class="container">
+        <section class="container">
             <div class="row h-100 justify-content-center">
-                <div class="col-lg-4 col-md-6 align-self-center first-text">
-                    <h3 class="tit-segunda-section">PRODUCTOS NATURALES</h3>
-                    <p class="text-imp">Velas 100% origen vegetal con variedad de aromas y flores
+                <div class="col-lg-4 col-md-6 align-self-center productos-text">
+                    <h2>PRODUCTOS NATURALES</h2>
+                    <p class="productos-text-p">Velas 100% origen vegetal y variedad de sahumos; con diferentes aromas y
+                        flores
                         naturales</p>
                     <a href="productos.html" class="btn btn-primary">Ver Productos</a>
                 </div>
@@ -154,24 +152,20 @@
                                 <a href="mayorista.html" class="card-img-top">
                                     <img src="img/home3.png" alt="Mayorista"></a>
                                 <div class="card-body d-flex flex-column align-items-center">
-                                    <p class="card-text">Sabias que tambien podes vender nustros productos en tu
-                                        local? o
-                                        eleginos
-                                        para souvenir de tu boda o evento.</p>
+                                    <p class="card-text">Queremos que seas parte de RUH! Vendé nuestros productos en tu
+                                        local, o
+                                        elegí nuestras velas para souvenir de tu boda o evento.</p>
                                     <a href="mayorista.html" class="btn btn-primary">Mayorista</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-5 col-sm-8 p-2 mt-4 d-flex flex-nowrap justify-content-center">
                             <div class="card card-home">
-                                <a href="mayorista.html" class="card-img-top"> <img src="img/home2.png"
+                                <a href="info.html" class="card-img-top"> <img src="img/home2.png"
                                         alt="Curiosidades"></a>
-
                                 <div class="card-body d-flex flex-column align-items-center">
-                                    <p class="card-text">Te contamos el uso y curiosidades de nuestros productos y
-                                        te
-                                        compartimos
-                                        info. util para cuidar y estar en contacto con la naturaleza.</p>
+                                    <p class="card-text">Te contamos sobre nuestros productos y te damos tips para estar
+                                        en contacto con la naturaleza y de como cuidarla.</p>
                                     <a href="info.html" class="btn btn-primary">Curiosidades</a>
                                 </div>
                             </div>
@@ -179,38 +173,38 @@
                     </article>
                 </div>
             </div>
-        </div>
+        </section>
 
+        <!-- seccion 2 -->
 
         <section class="productos-destacados">
-            <h2>Productos Destacados</h2>
+            <h3>Productos Destacados</h3>
             <div class="container">
                 <div class="row justify-content-center mb-5">
                     <div class="col-md-10 col-sm-12">
-                        <section id="thumbnail-carousel" class="splide"
-                            aria-label="thumbnails">
+                        <section id="thumbnail-carousel" class="splide" aria-label="thumbnails">
                             <div class="splide__track">
                                 <ul class="splide__list">
                                     <li class="splide__slide">
-                                        <img src="img/prod-bombitas.png" alt="">
+                                        <img src="img/prod-sahumo-1.png" alt="Sauhmos">
                                     </li>
                                     <li class="splide__slide">
-                                        <img src="img/prod-Pastillas.png" alt="">
+                                        <img src="img/prod-Pastillas.png" alt="Pastillas Defumadoras">
                                     </li>
                                     <li class="splide__slide">
-                                        <img src="img/prod-siete-chacras.png" alt="">
+                                        <img src="img/prod-siete-chacras.png" alt="Bombitas 7 Chakras">
                                     </li>
                                     <li class="splide__slide">
-                                        <img src="img/prod-sahumadores.png" alt="">
+                                        <img src="img/prod-s-natural.png" alt="Sahumerios">
                                     </li>
                                     <li class="splide__slide">
-                                        <img src="img/prod-velas.png" alt="">
+                                        <img src="img/prod-velas.png" alt="Velas">
                                     </li>
                                     <li class="splide__slide">
-                                        <img src="img/Prod-Palo-Santo.png" alt="">
+                                        <img src="img/prod-s-premium.png" alt="Sahumerio Premium">
                                     </li>
                                     <li class="splide__slide">
-                                        <img src="img/prod-velitas.png" alt="">
+                                        <img src="img/prod-velitas.png" alt="Velitas de madera">
                                     </li>
                                 </ul>
                             </div>
@@ -222,8 +216,6 @@
             </div>
         </section>
 
-
-
         <!-- seccion 3 -->
 
         <section class="container">
@@ -233,17 +225,16 @@
                 </div>
                 <div class="col-lg-4 col-md-6 home-nosotras align-self-center">
                     <h3>Nosotras</h3>
-                    <p>Te compartimos un poco de nosotras y de quienes estan atras de Ruh.</p>
+                    <p>Te contamos quien esta detras de RUH, y te compartimos un poco de nuestros intereses.</p>
                     <div class="btn nos"><a href="nosotras.html">CONOCENOS</a></div>
                 </div>
             </article>
         </section>
 
-
         <!-- footer -->
 
         <footer>
-            <div class="foot">
+            <section class="foot">
                 <nav class="botonera_f">
                     <div class="botonera_f_tit">Categoria</div>
                     <ul>
@@ -256,19 +247,19 @@
                     </ul>
                 </nav>
 
-                <div class="redes">
+                <section class="redes">
                     <div class="redes_tit">Sigamos conectados</div>
                     <div class="redes_iconos">
                         <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="redes_link1">
                             <img src="logos/Insta-logo.png" alt="Instagram" class="redes-img"> </a>
-                        <a href="https://www.facebook.com" target="_blank" class="redes_link2">
+                        <a href="https://www.facebook.com" target="_blank" class="redes_link1">
                             <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                     </div>
                     <div class="logo-f">
                         <img src="logos/logo-footer.png" alt="logo">
                         <p class="logo-tit-f">Ruh - Esencia</p>
                     </div>
-                </div>
+                </section>
 
                 <section class="foot_contacto">
                     <div class="foot_contacto_tit">Contactanos</div>
@@ -287,7 +278,7 @@
                         </article>
                     </div>
                 </section>
-            </div>
+            </section>
         </footer>
     </main>
 
