--- a/info.html
+++ b/info.html
@@ -14,9 +14,9 @@
     <meta property="og:description"
         content="Te contamos un poco mas sobre nuestros productos y te compartimos nuestra pasion por la naturaleza y tips para cuidarla">
     <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
-<meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/cuidado-ambiental.jpeg"> 
+    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/cuidado-ambiental.jpeg">
 
-<link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
     <!-- enlance bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -88,7 +88,7 @@
 
         <h2>Sobre nuestros productos...</h2>
 
-        <section class="container">
+        <section class="container acordeon-info">
             <article class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                     <h3 class="accordion-header" id="flush-headingOne">
@@ -160,13 +160,12 @@
                                     <h4 class="main_art_tit">Palo Santo</h4>
                                     <p>Muchos de ustedes conocen el Palo Santo y seguramente ya han comprobado que
                                         encenderlo es un acto
-                                        purificador ya que aumenta la sensación de calma y bienestar atrayendo
+                                        purificador, ya que aumenta la sensación de calma y bienestar atrayendo
                                         energías
                                         positivas y
-                                        armoniosas a todos
-                                        que estén en contacto con este humo.</p>
+                                        armoniosas a todos los que estén en contacto con este humo.</p>
                                     <h5>¿ Pero sabías que esta en peligro de extinción?.</h5>
-                                    <p>El palo santo es originario de sudamericana, se lo puede encontrar mayormente
+                                    <p>El palo santo es originario de sudamerica, se lo puede encontrar mayormente
                                         en
                                         ciertas regiones
                                         de
@@ -237,6 +236,7 @@
         </section>
 
         <h2>Ser concientes de nuestra Naturaleza</h2>
+
         <section class="contaiener">
             <article class="row justify-content-center text-naturaleza">
                 <div class="col-md-8">
@@ -244,21 +244,20 @@
                         relacionarnos de una manera más cuidadosa con el planeta, les compartimos algunos Tips de como
                         cuidar nuestro medio ambiente incorporando nuevos habitos.</p>
                 </div>
-                <div class="col-md-3 d-flex justify-content-center"> 
-                    <img src="logos/ic-planta.png" alt="" width="80">
-                    <img src="logos/ic-reciclaje.png" alt="" width="80"> </div>
+                <div class="col-md-4 d-flex justify-content-center">
+                    <img src="logos/ic-planta.png" alt="Icono de planta" width="100">
+                    <img src="logos/ic-reciclaje.png" alt="Icono de reciclaje" width="100"> </div>
             </article>
         </section>
 
-
-        <section class="container">
+        <section class="container acordeon-info">
             <article class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                     <h3 class="accordion-header" id="flush-headingfour">
                         <button class="accordion-button collapsed text-acordeon" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseFour" aria-expanded="false"
                             aria-controls="flush-collapsefour">
-                            Conexion con la naturaleza
+                            Conexión con la naturaleza
                         </button>
                     </h3>
                     <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
@@ -273,22 +272,18 @@
                                         <div class="card-body">
                                             <h4 class="card-title">¿Sabes que es el Grounding?</h4>
                                             <p class="card-text">El grounding es una palabra que significa
-                                                conectarnos con la tierra Podes
+                                                conectarnos con la tierra. Podes
                                                 hacerlo de distintas
                                                 formas, desde
-                                                caminar descalza por la tierra o pasto hasta meter los pies en
-                                                el agua del río o mar. Sentarse
-                                                un
-                                                rato al
-                                                sol, en el patio de tu casa, o estar en el
-                                                medio del campo rodeada de naturaleza, de cualquier manera, esta
-                                                conexión con la tierra nos
+                                                caminar descalza por la tierra o pasto, hasta meter los pies en
+                                                el agua del río o mar, de cualquier manera, esta
+                                                conexión con la tierra, nos
                                                 ayuda a
                                                 estar
-                                                presentes, equilibrarnos, relajarnos, a controlar el estrés,
+                                                presentes, equilibrarnos, relajarnos, controlar el estrés,
                                                 estimular nuestra creatividad y
                                                 aumentar
-                                                nuestro autoestima, hasta ayuda a que puedas dormir mejor por la
+                                                nuestro autoestima. Hasta ayuda a que puedas dormir mejor por la
                                                 noche. Podes probar los
                                                 beneficios
                                                 de esta
@@ -320,7 +315,7 @@
                         <button class="accordion-button collapsed text-acordeon" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseFive" aria-expanded="false"
                             aria-controls="flush-collapseFive">
-                            Eco friendly 
+                            Eco friendly
                         </button>
                         </h2>
                         <div id="flush-collapseFive" class="accordion-collapse collapse"
@@ -341,12 +336,12 @@
                                                     es el
                                                     que no se genera, porque no solo hay que reciclar sino
                                                     también reducir la basura que generamos.
-                                                    Sabias que el uso promedio del bolsas de plastico es de 12
+                                                    Sabias que el uso promedio de bolsas de plastico es de 12
                                                     minutos y tardan entre 150 a 1000
                                                     años en
                                                     degradarse?
                                                     Eso puede evitarse usando bolsas reutilizables o
-                                                    caias/bolsas de cartón, por eso, antes de
+                                                    cajas/bolsas de cartón, por eso, antes de
                                                     aceptar
                                                     una bolsa
                                                     de plástico en compras de mercados/ farmacias/ kioscos
@@ -354,9 +349,9 @@
                                                     tela
                                                     y
                                                     evitar el uso inecesario de bolsas de plastico.
-                                                    Desde Ruh utilizamos bolsas de packaging sustentable.
+                                                    Desde Ruh utilizamos packaging sustentable.
                                                     Es importante que tomemos conciencia y nos informemos sobre
-                                                    cómo cuidar al medioambiente, somos
+                                                    cómo cuidar al medio ambiente, somos
                                                     parte de la
                                                     naturaleza.</p>
                                                 <h4>"NO HAY PLAN B, PORQUE NO TENEMOS OTRO PLANETA”</h4>
@@ -374,7 +369,7 @@
     <!-- footer  -->
 
     <footer>
-        <div class="foot">
+        <section class="foot">
             <nav class="botonera_f">
                 <div class="botonera_f_tit">Categoria</div>
                 <ul>
@@ -387,19 +382,19 @@
                 </ul>
             </nav>
 
-            <div class="redes">
+            <section class="redes">
                 <div class="redes_tit">Sigamos conectados</div>
                 <div class="redes_iconos">
                     <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="redes_link1">
                         <img src="logos/Insta-logo.png" alt="Instagram" class="redes-img"> </a>
-                    <a href="https://www.facebook.com" target="_blank" class="redes_link2">
+                    <a href="https://www.facebook.com" target="_blank" class="redes_link1">
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
                     <img src="logos/logo-footer.png" alt="logo">
                     <p class="logo-tit-f">Ruh - Esencia</p>
                 </div>
-            </div>
+            </section>
 
             <section class="foot_contacto">
                 <div class="foot_contacto_tit">Contactanos</div>
@@ -418,7 +413,7 @@
                     </article>
                 </div>
             </section>
-        </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
