--- a/productos.html
+++ b/productos.html
@@ -29,6 +29,7 @@
 
 <body>
     <!-- header -->
+
     <header>
         <div class="barra">
             <div class="logo">
@@ -38,6 +39,7 @@
         </div>
 
         <!-- nav  -->
+
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler button-nav" type="button" data-bs-toggle="collapse"
@@ -81,44 +83,42 @@
 
     <!-- main  -->
 
-    <section class="tit">
+    <section class="tit-productos">
         <h2>Nuestros Productos</h2>
     </section>
 
-
     <section class="container pb-5">
-        <h3 class="prod-tit" id="sahumerios"> * Sahumerios</h3>
+        <h3 class="categoria-productos" id="sahumerios"> * Sahumerios</h3>
         <article class="row card-row">
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
-                    <img src="img/Prod-Palo-Santo.png" class="card-img-top" alt="Palo Santo">
+                    <img src="img/Prod-Palo-Santo.png" class="card-img-top" alt="Sahumerio Palo Santo">
                     <div class="card-body">
                         <p class="card-text">Linea Palo Santo </p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
-                    <img src="img/prod-saumerios.png" class="card-img-top" alt="Linea Natural">
+                    <img src="img/prod-s-natural.png" class="card-img-top" alt="Shaumerio Linea Natural">
                     <div class="card-body">
                         <p class="card-text">Linea Natural</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
-                    <img src="img/prod-s-premium.png" class="card-img-top" alt="Linea Premium">
+                    <img src="img/prod-s-premium.png" class="card-img-top" alt="Sahumerio Linea Premium">
                     <div class="card-body">
                         <p class="card-text">Linea Premium </p>
                     </div>
                 </div>
             </div>
-
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
                     <img src="img/prod-porta-shau.png" class="card-img-top" alt="Porta Sahumerios">
                     <div class="card-body">
-                        <p class="card-text">Porta Sahumerios de madera</p>
+                        <p class="card-text">Porta Sahumerio Madera</p>
                     </div>
                 </div>
             </div>
@@ -127,9 +127,9 @@
 
 
     <section class="container pb-5">
-        <h3 class="prod-tit" id="sahumos"> * Sahumos y Defumadores</h3>
+        <h3 class="categoria-productos" id="sahumos"> * Sahumos y Defumadores</h3>
         <article class="row card-row">
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
                     <img src="img/prod-sahumo-1.png" class="card-img-top" alt="Ramillo de Sahumo">
                     <div class="card-body">
@@ -137,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
                     <img src="img/prod-Pastillas.png" class="card-img-top" alt="Pastillas defumadoras">
                     <div class="card-body">
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
                     <img src="img/prod-piramide.png" class="card-img-top" alt="Piramides defumadoras">
                     <div class="card-body">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
                     <img src="img/prod-bombitas.png" class="card-img-top" alt="Bombitas defumadores">
                     <div class="card-body">
@@ -161,7 +161,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
                     <img src="img/prod-siete-chacras.png" class="card-img-top" alt="7 chakras">
                     <div class="card-body">
@@ -169,11 +169,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
                     <img src="img/prod-sahumadores.png" class="card-img-top" alt="Shaumador Ceramica">
                     <div class="card-body">
-                        <p class="card-text">Sahumador de ceramica</p>
+                        <p class="card-text">Sahumador de Ceramica</p>
                     </div>
                 </div>
             </div>
@@ -182,21 +182,21 @@
 
 
     <section class="container pb-5">
-        <h3 class="prod-tit" id="velas"> * Velas de cera vegetal</h3>
+        <h3 class="categoria-productos" id="velas"> * Velas Aromáticas</h3>
         <article class="row card-row">
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
-                    <img src="img/prod-velas.png" class="card-img-top" alt="Vela con decoración">
+                    <img src="img/prod-velas.png" class="card-img-top" alt="Velas con decoración">
                     <div class="card-body">
-                        <p class="card-text">Vela con flores</p>
+                        <p class="card-text">Vela con Flores</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-5 col-sm-6 p-4 cont-card">
+            <div class="col-lg-3 col-md-5 col-sm-6 p-4 d-flex flex-nowrap cont-card">
                 <div class="card card-home">
                     <img src="img/prod-velitas.png" class="card-img-top" alt="Mini velas">
                     <div class="card-body">
-                        <p class="card-text">Mini Velas de madera</p>
+                        <p class="card-text">Mini Velas Madera</p>
                     </div>
                 </div>
             </div>
@@ -207,7 +207,7 @@
     <!-- footer  -->
 
     <footer>
-        <div class="foot">
+        <section class="foot">
             <nav class="botonera_f">
                 <div class="botonera_f_tit">Categoria</div>
                 <ul>
@@ -220,19 +220,19 @@
                 </ul>
             </nav>
 
-            <div class="redes">
+            <section class="redes">
                 <div class="redes_tit">Sigamos conectados</div>
                 <div class="redes_iconos">
                     <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="redes_link1">
                         <img src="logos/Insta-logo.png" alt="Instagram" class="redes-img"> </a>
-                    <a href="https://www.facebook.com" target="_blank" class="redes_link2">
+                    <a href="https://www.facebook.com" target="_blank" class="redes_link1">
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
                     <img src="logos/logo-footer.png" alt="logo">
                     <p class="logo-tit-f">Ruh - Esencia</p>
                 </div>
-            </div>
+            </section>
 
             <section class="foot_contacto">
                 <div class="foot_contacto_tit">Contactanos</div>
@@ -251,7 +251,7 @@
                     </article>
                 </div>
             </section>
-        </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
