--- a/mayorista.html
+++ b/mayorista.html
@@ -86,13 +86,13 @@
 
     <section class="mayor_tit">
         <h2>Venta de velas por mayor;</h2>
-        <p>para eventos, negocios o reventa</p>
+        <p>Para eventos, negocios o reventa.</p>
     </section>
 
     <section class="container-img">
         <div class="box-img">
             <figure>
-                <img src="img/evento1.png" alt="Evento, casameinto">
+                <img src="img/evento1.png" alt="Evento, Casamiento">
             </figure>
         </div>
         <div class="box-img evento-descripcion">
@@ -134,7 +134,7 @@
     <!-- footer -->
 
     <footer>
-        <div class="foot">
+        <section class="foot">
             <nav class="botonera_f">
                 <div class="botonera_f_tit">Categoria</div>
                 <ul>
@@ -147,19 +147,19 @@
                 </ul>
             </nav>
 
-            <div class="redes">
+            <section class="redes">
                 <div class="redes_tit">Sigamos conectados</div>
                 <div class="redes_iconos">
                     <a href="https://www.instagram.com/ruh.esencia/" target="_blank" class="redes_link1">
                         <img src="logos/Insta-logo.png" alt="Instagram" class="redes-img"> </a>
-                    <a href="https://www.facebook.com" target="_blank" class="redes_link2">
+                    <a href="https://www.facebook.com" target="_blank" class="redes_link1">
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
                     <img src="logos/logo-footer.png" alt="logo">
                     <p class="logo-tit-f">Ruh - Esencia</p>
                 </div>
-            </div>
+            </section>
 
             <section class="foot_contacto">
                 <div class="foot_contacto_tit">Contactanos</div>
@@ -178,7 +178,7 @@
                     </article>
                 </div>
             </section>
-        </div>
+        </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
