borrado publicidad hosting

--- a/exito.html
+++ b/exito.html
@@ -50,6 +50,7 @@
             window.location.replace("index.html")
         }, 4000);
     </script>
+    <div  class="disclaimer"></div>
 </body>
 
 </html>
