--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
             <div class="carousel-item active">
                 <img src="img/carousel-1.png" class="d-block w-100 " alt="Portada Velas">
                 <div class="carousel-caption d-none d-md-block">
-                    <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
+                    <p class="text-carousel">Velas que decoran <br>y nos regalan luz.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="img/carousel-2.png" class="d-block w-100" alt="Portada sahumadores" sizes="auto">
                 <div class="carousel-caption d-none d-md-block">
-                    <p class="text-carousel">Esencias para reconectar <br>y despertar sentidos.</p>
+                    <p class="text-carousel"> Conectar con la naturaleza<br> sahumando.</p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -290,6 +290,7 @@
     <script>
         new Splide('.splide').mount();
     </script>
+       <div  class="disclaimer"></div>
 
 </body>
 
