--- a/info.html
+++ b/info.html
@@ -324,7 +324,7 @@
                                 <div class="card mb-3" style="max-width: 1140px; margin: auto;">
                                     <div class="row g-0 justify-content-center">
                                         <div class="col-md-4 col-sm-8">
-                                            <img src="img/cuidado-ambiental.jpeg" class="img-fluid rounded-start"
+                                            <img src="img/cuidado-ambiental.png" class="img-fluid rounded-start"
                                                 alt="Ambiente">
                                         </div>
                                         <div class="col-md-8 col-sm-10">
@@ -423,7 +423,7 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
 
-
+<div class="disclaimer"></div>
 </body>
 
 </html>
